--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,63 @@
 ---
-title: Hello World
-description: Your first document
+title: "Overview"
+date: "2025-02-22"
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# Welcome to ZoAO.tech
 
-## What is Next?
+ZoAO.tech is the central hub for technical documentation and standards that underpin the ZoAO ecosystem. Here, you will find comprehensive guides, code samples, and best practices designed to empower developers, NFT creators, and technical partners. Our focus is on building robust, secure, and extensible systems that will seamlessly integrate with our future marketplace, **zoao.market**, and beyond.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+---
+
+## **NFT & FT Token Standards**
+
+Detailed documentation on our token standards, including the advanced zNFT token standard. Learn about supply constraints, pausable mechanisms, role-based access, enhanced metadata, and global royalty mechanisms.
+
+[Dive deep into the zNFT Token Standard](/docs/znft/overview)
+
+## **Showcase Campaign – Zoo Keepers Genesis**
+
+Explore our first NFT campaign that leverages AI-driven trait generation and a campaign-specific genome, setting the stage for future evolution and breeding mechanics.
+
+[Zoo Keepers Genesis](./zoo-keepers-genesis.mdx)
+
+## **Tooling & SDKs**
+
+Information on the ecosystem tools and upcoming SDKs that will empower you to build and integrate with our platform.
+
+[Explore the Tools available for AO](./tools.mdx)
+
+## **Governance & DAO**
+
+An introduction to our planned governance model, including details on the future ZoAO token for marketplace transactions and decentralized decision-making.
+
+## **Advanced Developer Topics**
+
+In-depth technical guides, best practices for secure Lua programming, performance optimizations, and more about developing into the AO ecosystem.
+
+## **FAQ & Troubleshooting**
+
+A collection of frequently asked questions and solutions to common challenges encountered during integration and development.
+
+---
+
+## Getting Started
+
+1. **Explore the Documentation:**  
+   Navigate through our sections using the sidebar or the links above. Each area is organized into dedicated MD files for clarity and ease of maintenance.
+
+2. **Join the Community:**  
+   For support, discussions, and updates, join our developer forums and community channels. Your feedback helps shape the future of ZoAO.
+
+3. **Stay Updated:**  
+   We are continually evolving. Be sure to check back for new content, SDK releases, and governance updates as the platform matures.
+
+---
+
+## About ZoAO.tech
+
+ZoAO.tech is the technical arm of the ZoAO ecosystem, committed to establishing industry-leading standards and tools for NFT creation and management. Our vision is to provide a robust infrastructure that not only supports cutting-edge NFT projects but also fosters innovation through community collaboration and decentralized governance.
+
+---
+
+_Thank you for exploring ZoAO.tech. Let's build the future of NFTs together!_
