--- a/content/docs/zoo-keepers/metadata-format.mdx
+++ b/content/docs/zoo-keepers/metadata-format.mdx
@@ -9,74 +9,75 @@ This document outlines the metadata schema used for Zoo Keeper Genesis zNFTs. Th
 
 ## Metadata Schema Overview
 
+Zoo Keeper Genesis zNFTs utilize a standardized metadata schema, which is designed to be both extensible and secure. The schema is defined in the [zNFT Token Standard](/docs/znft/metadata-structure) and is implemented in the znft-token-standard repository.
+
 Each Zoo Keeper Genesis NFT metadata object includes the following fields:
 
-- **version**:  
-  A string representing the schema version. This is useful for future upgrades and backward compatibility.
+import { TypeTable } from "fumadocs-ui/components/type-table";
 
-- **name**:  
-  A human-readable token name.
-
-- **description**:  
-  A detailed description of the token, providing context and narrative.
-
-- **media**:  
-  An array of image objects for various resolutions or purposes. Each image object includes:
-
-  - `id`: A unique identifier for the image.
-  - `url`: A direct link to the image.
-  - `mimeType`: The MIME type (e.g., `image/png`).
-  - `alt`: Alternative text description for accessibility.
-
-- **attributes**:  
-  An array of attribute objects representing token traits. Each attribute includes:
-  - `trait_type`: The name of the attribute (e.g., "Rarity", "Species").
-  - `value`: The corresponding value of the attribute.
+<TypeTable
+  type={{
+    version: {
+      description:
+        "The metadata schema version. Constant value set to '0.1.0'.",
+      type: "string",
+      default: "0.1.0",
+    },
+    id: {
+      description: "A unique identifier for the NFT metadata.",
+      type: "string",
+      default: "Token ID",
+    },
+    frozen: {
+      description:
+        "A string flag (`'true'` or `'false'`) indicating whether the metadata is locked from further changes. Defaults to `'false'` if not provided.",
+      type: "string",
+      default: "'false'",
+    },
+    name: {
+      description: "A human-readable name of the NFT.",
+      type: "string",
+    },
+    description: {
+      description: "A detailed narrative about the NFT.",
+      type: "string",
+    },
+    external_url: {
+      description: "The external link associated with the NFT.",
+      type: "string",
+    },
+    media: {
+      description: "An array of media objects associated with the NFT.",
+      type: "MediaObject[]",
+      typeDescriptionLink:
+        "/docs/znft/metadata-structure#mediaobject-interface",
+    },
+    attributes: {
+      description: "An array of attribute objects representing NFT traits.",
+      type: "Attribute[]",
+      typeDescriptionLink: "/docs/znft/metadata-structure#attributes-interface",
+    },
+    properties: {
+      description: "Extra properties defining NFT stats.",
+      type: "Record<string, any>",
+    },
+    image_prompt: {
+      description:
+        "A string containing the prompt used to generate the NFT image.",
+      type: "string",
+    },
+    video_prompt: {
+      description:
+        "A string containing the prompt used to generate the NFT video.",
+      type: "string",
+    },
+  }}
+/>
 
 <Callout>
-  Zoo Keeper Genesis zNFT will always contain the following traits: `Genome`,
+  Zoo Keeper Genesis zNFT will always contain the following attributes: `Genome`,
   `Species`, `Rarity`
 </Callout>
-
-- **properties**:  
-  An extensible object for any additional metadata. Both keys and values must be strings. These properties are used to store campaign-specific information.
-
-- **isFrozen**:  
-  A string flag (`"true"` or `"false"`) indicating whether the metadata is locked from further changes. Defaults to `"false"` if not provided.
-
-Below is an example of a Zoo Keeper Genesis zNFT metadata:
-
-```json
-{
-  "version": "0.1.0",
-  "name": "Token Name",
-  "description": "A detailed description of the token.",
-  "media": [
-    {
-      "id": "profile",
-      "url": "https://example.com/image1.png",
-      "mimeType": "image/png",
-      "alt": "Primary view of the token"
-    }
-  ],
-  "attributes": [
-    {
-        "trait_type": "Genome",
-        "value": "A1B2C3D4E5F6G7H8I9J0"
-    },
-    {
-        "trait_type": "Species",
-        "value": "LION"
-    }
-    {
-      "trait_type": "Rarity",
-      "value": "Legendary"
-    },
-  ],
-  "properties": {"power": "10","exp": "0"},
-  "isFrozen": "false"
-}
-```
 
 ---
 
@@ -85,6 +86,7 @@ Below is an example of a Zoo Keeper Genesis zNFT metadata:
 The metadata schema is validated using the [zNFT Token Standard](https://json-schema.org/). The schema validation module can be found in the znft-token-standard repository under `src/modules/metadata.lua` file.
 
 Key validation steps include:
+
 - **Type Enforcement**: Verifies that required fields are present and have the correct data types.
 - **Media and Attributes**: Ensures that each media object and attribute conforms to the expected format.
 - **Default Values**: Sets default values for optional fields such as isFrozen and alt text.
@@ -95,12 +97,13 @@ Key validation steps include:
 While the metadata structure above forms the foundation for our NFTs, the Zoo Keeper Genesis campaign introduces an additional, campaign-specific element: **the genome**.
 
 - **Genome Integration:**
-Unlike standard zNFT metadata, the genome is encoded as a unique attribute within the attributes array. It is not included by default, but is added during the campaign-specific minting process.
+  Unlike standard zNFT metadata, the genome is encoded as a unique attribute within the attributes array. It is not included by default, but is added during the campaign-specific minting process.
 
 - **Purpose of the Genome:**
-The genome captures the NFT’s genetic blueprint—a compact, hexadecimal string generated by our custom Genome Library. It is derived from the detailed traits generated by our AI-driven systems and serves as the basis for future evolution and breeding mechanics.
+  The genome captures the NFT’s genetic blueprint—a compact, hexadecimal string generated by our custom Genome Library. It is derived from the detailed traits generated by our AI-driven systems and serves as the basis for future evolution and breeding mechanics.
 
 In the next section, we will detail the genome encoding process, including:
+
 - The structure and layout of the genome (e.g., version byte, species value, and trait-value pairs).
 - The encoding steps that transform detailed traits into a genome string.
 - How the genome is integrated into the NFT metadata as a campaign-specific trait.
